journal app updates

--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -18,7 +18,7 @@
     <button>Post</button>
 <%end%>
 
-<p><%=link_to 'Show all', tweets_path %></p>
+<p><%=link_to 'All tweets', tweets_path %></p>
 
 
 
