--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,11 @@
+
+<%if logged_in? %>
+    <p><%=link_to 'Logout', logout_path, method: :delete %></p>
+<%else%>
+    <p><%=link_to 'Login', login_path %></p>
+<%end%>    
 <h1>show indexed tweets </h1>
 <%= render 'tweets'%>
 
 <p><%=link_to 'New Tweet', new_tweet_path %></p>
+<p><%=link_to 'All Tweets', tweets_path %></p>
