--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -4,7 +4,7 @@
 <p><%=@tweet.user.email%></p>
 
 
-<p><%=link_to 'Show all', tweets_path %></p>
+<p><%=link_to 'All tweets', tweets_path %></p>
 <p><%=link_to 'New', new_tweet_path %></p>
 <p><%=link_to 'Edit', edit_tweet_path(@tweet) %></p>
 <p><%=link_to 'Delete', tweet_path(@tweet), method: :delete, data: { confirm: "Are you sure you want to delete?"} %></p>
