--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,7 +5,8 @@
     <p><%=link_to 'Login', login_path %></p>
 <%end%>    
 <h1>show indexed tweets </h1>
-<%= render 'tweets'%>
+<%= render 'tweet'%>
 
 <p><%=link_to 'New Tweet', new_tweet_path %></p>
 <p><%=link_to 'All Tweets', tweets_path %></p>
+<p><%=link_to 'All Users', users_path %></p>
