--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,8 +13,10 @@
         <td><%=user.username%></td>
         <td><%=user.email%></td>
         <td><%=link_to "Show", user%></td>
-        <td><%=link_to "Edit", edit_user_path(user)%></td>
-        <td><%=link_to "Delete", user_path(user), method: :delete, data: {confirm: "Are you sure you want to delete user?"}%></td>
+        <%if logged_in? && user == current_user%>
+            <td><%=link_to "Edit", edit_user_path(user)%></td>
+            <td><%=link_to "Delete", user_path(user), method: :delete, data: {confirm: "Are you sure you want to delete user?"}%></td>
+        <%end%>
     </tr>
 <%end%>
 </table>
