fusing react in rails

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -20,8 +20,12 @@
                 <td></td>
                 <td></td>
                 <td><%=tweet.user.email%></td>
+                <td>
+                    <% if tweet.topics.any?%>
+                        <%=render tweet.topics%>
+                    <%end%>
+                </td>
             </tr>
-            
         <%end%>
     </tbody>
 </table>
