--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -15,6 +15,11 @@
         <%=f.text_area :tweet%>
     </p>
 
+    <p>
+        <%=f.label :topic%>
+        <%=f.collection_select(:topic_ids, Topic.all, :id, :topic, {prompt: "Make selection from list below"}, {multiple: true})%>
+    </p>
+
     <button>Post</button>
 <%end%>
 
