--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
 
     <button>Create</button>
 <%end%>
-
+<%= react_component("HelloWorld", {greeting: "you"})%>
 <p><%=link_to 'root', tweets_path %></p>
 
 
