--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+     margin: 0;
+ }
+
+ a{
+     color: inherit;
+     text-decoration: none;
+ }
