--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<h1> homepage </h1>
 
-<%=link_to 'Sign in', login_path%>
+<%= react_component("Home/Home", {signup: signup_path, login: login_path})%>
+
