--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+ @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
+ 
  body{
      margin: 0;
  }
