--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,20 @@
  */
 
  @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
- 
+
  body{
      margin: 0;
+     font-family: 'Lato', sans-serif;
  }
 
  a{
      color: inherit;
      text-decoration: none;
+ }
+
+ .flash_message{
+     position: absolute;
+     top: 5%;
+     left: 25%;
+     color: white;
  }
