--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
   </head>
 
   <body>
-    <% flash.each do |name,msg| %>
-      <%=msg%>
-    <%end%>
+    <div class='flash_message'>
+      <% flash.each do |name,msg| %>
+        <%=msg%>
+      <%end%>
+    </div>
     <%= yield %>
   </body>
 </html>
