--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.bodyIndexTweet{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+}
+
+.bodyIndexLeft{
+    height: 100%;
+    flex-basis: 20%;
+    border-right: .5px solid gray;
+}
+
+.bodyIndexMid{
+    height: 100%;
+    flex-basis: 60%;
+    overflow-y: scroll;
+}
+
+.bodyIndexRight{
+    height: 100%;
+    flex-basis: 20%;
+    border-left: .5px solid gray;
+}
