--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,12 +1,19 @@
+<div class="bodyIndexTweet">
+        <%=react_component("Sidebar/Sidebar", {logout: logout_path}, class: "bodyIndexLeft")%>
+    <div class="bodyIndexMid">
+        <%if logged_in? %>
+            <p><%=link_to 'Logout', logout_path, method: :delete %></p>
+        <%else%>
+            <p><%=link_to 'Login', login_path %></p>
+        <%end%> 
 
-<%if logged_in? %>
-    <p><%=link_to 'Logout', logout_path, method: :delete %></p>
-<%else%>
-    <p><%=link_to 'Login', login_path %></p>
-<%end%>    
-<h1>show indexed tweets </h1>
-<%= render 'tweet'%>
+        <h1>show indexed tweets </h1>
+        <%= render 'tweet'%>
 
-<p><%=link_to 'New Tweet', new_tweet_path %></p>
-<p><%=link_to 'All Tweets', tweets_path %></p>
-<p><%=link_to 'All Users', users_path %></p>
+        <p><%=link_to 'New Tweet', new_tweet_path %></p>
+        <p><%=link_to 'All Tweets', tweets_path %></p>
+        <p><%=link_to 'All Users', users_path %></p>
+    </div>
+    <div class="bodyIndexRight">
+    </div>
+</div>
