--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,12 @@
      text-decoration: none;
  }
 
+ ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
  .flash_message{
      position: absolute;
      top: 5%;
