--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -29,3 +29,8 @@
         <%end%>
     </tbody>
 </table>
+<%if logged_in? %>
+    <p><%=link_to 'Logout', logout_path, method: :delete %></p>
+<%else%>
+    <p><%=link_to 'Login', login_path %></p>
+<%end%> 
