--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.topic_partial{
+    color: #00acee;
+}
+
+.topics_index{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.topics_index h2{
+    color: #00acee;
+}
