--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,20 +1,2 @@
 
-<table>
-    <thead>
-        <tr>
-            <th>Topic</th>
-            <th colspan='3'>Number</th>
-            <th>By</th>
-        </tr>
-        <tr>
-        </tr>
-    </thead>
-    <tbody>
-        <%@topics.each do |topic|%>
-            <tr>
-                <td><%=link_to topic.topic, topic_path(topic)%></td>
-                <td><%= pluralize(topic.tweets.count, "topic")%></td>
-            </tr>
-        <%end%>
-    </tbody>
-</table>
+<div class="topic_partial">#<%=link_to topic.topic, topic_path(topic)%></div>
