--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,34 +1,29 @@
-<table>
-    <thead>
-        <tr>
-            <th>Tweet</th>
-            <th colspan='3'>Actions</th>
-            <th>By</th>
-        </tr>
-        <tr>
-        </tr>
-    </thead>
-    <tbody>
-        <%@tweets.each do |tweet|%>
-            <tr>
-                <td><%=tweet.tweet%></td>
-                <td><%=link_to 'Show', tweet_path(tweet)%> </td>
-                <%if logged_in? && tweet.user == current_user%>
-                    <td><%=link_to 'Edit', edit_tweet_path(tweet)%> </td>
-                    <td><%=link_to 'Delete', tweet_path(tweet), method: :delete, data: { confirm: "Are you sure you want to delete?"}%> </td>
-                <%end%>
-                <td></td>
-                <td></td>
-                <td><%=tweet.user.email%></td>
-                <td>
-                    <% if tweet.topics.any?%>
-                        <%=render tweet.topics%>
+<%@tweets.each do |tweet|%>
+    <div class="tweet_container">
+        <div class="tweet_container_main">
+            <%=react_component("MainTweet/Avatar", prerender: true)%>
+            <%=link_to tweet_path(tweet), class:"tweet_container_user" do %>
+                <div class="tweet_container_user_head">
+                    <span class="tweet_user"><%=tweet.user.username%></span>
+                    <span class="tweet_time_ago"><%= time_ago_in_words(tweet.created_at)%></span>
+                </div>
+                <div>
+                    <%=tweet.tweet%>
+                    <%if tweet.topics.any?%>
+                        <%tweet.topics.each do |topic|%>
+                            <span class="tweet_topic">#<%=topic.topic%></span>
+                        <%end%>   
                     <%end%>
-                </td>
-            </tr>
-        <%end%>
-    </tbody>
-</table>
+                </div>
+            <%end%>
+        </div>
+        <div class="tweet_container_icons">
+            <%=react_component("MainTweet/Links", prerender: true)%>
+        </div>
+    </div>
+<%end%>
+
+
 <%if logged_in? %>
     <p><%=link_to 'Logout', logout_path, method: :delete %></p>
 <%else%>
