--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,2 +1,4 @@
 
-<div class="topic_partial">#<%=link_to topic.topic, topic_path(topic)%></div>
+<div class="topic_partial">
+    #<%=link_to topic.topic, topic_path(topic)%>
+</div>
