--- a/app/views/replies/show.html.erb
+++ b/app/views/replies/show.html.erb
@@ -1,18 +1,17 @@
 <div class="bodyIndexTweet">
-        <%=react_component("Sidebar/Sidebar", {logout: logout_path, profile: user_path(@current_user.id), new: new_tweet_path, username: @current_user.username, email: @current_user.email}, class: "bodyIndexLeft")%>
+        <%=react_component("Sidebar/Sidebar", {logout: logout_path}, class: "bodyIndexLeft")%>
     <div class="bodyIndexMid">
         <div class="bodyIndexMid__label">Thread</div>
-        <%= render 'single'%>
-        <%= render 'reply'%>
+        <%= render 'tweets/single'%>
     </div>
     <div class="bodyIndexRight">
         <div class="bodyIndexRight__main">
             <%=react_component("Search/Search", prerender: true)%>
             <div class="category__index">
-                <%=react_component("Trending/Trending", {topics: @topics_top ,new: new_topic_path})%>
+                <%=react_component("Trending/Trending", {topics: @topics})%>
             </div>
             <div class="users__index">
-                <%=react_component("Followers/Followers", {users: @users_top})%>
+                <%=react_component("Followers/Followers", {users: @users})%>
             </div>
             <%if logged_in? %>
                 <p style="font-size: 12px; color: red; text-align: right"><%=link_to 'Logout', logout_path, method: :delete %></p>
