--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,9 +1,35 @@
-<h1>show category</h1>
-
-<p><%=@topic.topic%></p>
-
-<%if @tweets.any?%>
-    <%@tweets.each do |tweet|%>
-        <span><%=tweet.tweet%></span><br>
-    <%end%>
-<%end%>
+<div class="bodyIndexTweet">
+        <%=react_component("Sidebar/Sidebar", {logout: logout_path, profile: user_path(@current_user.id), new: new_tweet_path, username: @current_user.username, email: @current_user.email}, class: "bodyIndexLeft")%>
+    <div class="bodyIndexMid">
+        <div class="bodyIndexMid__label">#<%=@topic.topic%></div>
+        <%if @topic.tweets.any?%>
+            <%@topic.tweets.each do |tweet|%>
+                <div class="bodyIndexMid__mainForm">
+                    <%=link_to tweet_path(tweet), class: "topic_show" do%>
+                        <%=react_component("MainTweet/Avatar", prerender: true)%>
+                        <div class="topic_show_main">
+                            <span class='topic_username'>@<%=tweet.user.username%></span>
+                            <span><%=tweet.tweet%></span>
+                        </div>
+                    <%end%>
+                </div>  
+            <%end%>
+        <%end%>
+    </div>
+    <div class="bodyIndexRight">
+        <div class="bodyIndexRight__main">
+            <%=react_component("Search/Search", prerender: true)%>
+            <div class="category__index">
+                <%=react_component("Trending/Trending", {topics: @topics_top ,new: new_topic_path})%>
+            </div>
+            <div class="users__index">
+                <%=react_component("Followers/Followers", {users: @users_top})%>
+            </div>
+            <%if logged_in? %>
+                <p style="font-size: 12px; color: red; text-align: right"><%=link_to 'Logout', logout_path, method: :delete %></p>
+            <%else%>
+                <p><%=link_to 'Login', login_path %></p>
+            <%end%>
+        </div>
+    </div>
+</div>
