--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="bodyIndexTweet">
-        <%=react_component("Sidebar/Sidebar", {logout: logout_path}, class: "bodyIndexLeft")%>
+        <%=react_component("Sidebar/Sidebar", {logout: logout_path, profile: user_path(@current_user.id), new: new_tweet_path, username: @current_user.username, email: @current_user.email}, class: "bodyIndexLeft")%>
     <div class="bodyIndexMid">
         <div class="bodyIndexMid__label">Connect</div>
          <%=render 'user'%>
@@ -8,10 +8,10 @@
         <div class="bodyIndexRight__main">
             <%=react_component("Search/Search", prerender: true)%>
             <div class="category__index">
-                <%=react_component("Trending/Trending", {topics: @topics})%>
+                <%=react_component("Trending/Trending", {topics: @topics_top ,new: new_topic_path})%>
             </div>
             <div class="users__index">
-                <%=react_component("Followers/Followers", {users: @users})%>
+                <%=react_component("Followers/Followers", {users: @users_top})%>
             </div>
         </div>
     </div>
