--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,34 @@
-
-<h5><%= @user.username%></h5>
-<p><%= @user.email%></p>
-
-<%=link_to 'Index', users_path%>
-
-<%if logged_in? && @user==current_user%>
-    <%=link_to "Edit profile", edit_user_path(@user)%>
-<%end%>
-
-<p>List of tweets </p>
-<%=render 'tweets/tweet'%>
+<div class="bodyIndexTweet">
+        <%=react_component("Sidebar/Sidebar", {logout: logout_path, profile: user_path(@current_user.id), new: new_tweet_path, username: @current_user.username, email: @current_user.email}, class: "bodyIndexLeft")%>
+    <div class="bodyIndexMid">
+        <div class="bodyIndexMid__label">
+            <div class="bodyIndexMid__profile">
+                <div class="bodyIndexMid__profileLabel">
+                    <span class="bodyIndexMid__profileLabel_user">@<%=@user.username%></span>
+                    <span class="bodyIndexMid__profileLabel_email"><%=@user.email%></span>
+                </div>
+                <div class="bodyIndexMid__profileButton">
+                    <% if @user == current_user %>
+                        <%= link_to edit_user_path(@user) do%>
+                            <button class="bodyIndexMid__profileLabel_button">Edit Profile</button>
+                        <%end%>
+                    <% else %>
+                        <button class="bodyIndexMid__profileLabel_button">Follow</button>
+                    <%end%>
+                </div>
+            </div>
+        </div>
+        <%=render 'tweets/tweet'%>
+    </div>
+    <div class="bodyIndexRight">
+        <div class="bodyIndexRight__main">
+            <%=react_component("Search/Search", prerender: true)%>
+            <div class="category__index">
+                <%=react_component("Trending/Trending", {topics: @topics_top ,new: new_topic_path})%>
+            </div>
+            <div class="users__index">
+                <%=react_component("Followers/Followers", {users: @users_top})%>
+            </div>
+        </div>
+    </div>
+</div>
